# fractal-healthcheck

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: publish_to_pypi.yml
.github/workflows/: ci.yml  examples.yml  publish_to_pypi.yml  zizmor.yml
SSH/: Dockerfile  entrypoint.sh
examples/: checks_config.yaml  checks_config_mockchecks.yaml  checks_local.yaml
src/fractal_healthcheck/: __init__.py  checks.py  main.py  report.py
src/fractal_healthcheck/checks/: CheckResults.py  __init__.py  implementations.py
src/fractal_monitoring/: main.py
tests/: .checks_config_fail.yaml.swp  checks_config_fail.yaml  checks_config_success.yaml  config_with_general_key.yaml  config_with_general_key_and_value.yaml  config_without_general_key.yaml  run_docker_mailpit.sh  run_openssh_mailpit.sh  test_fractal_health.py  test_load_config.py
tests/test_implementations/: conftest.py  test_check_mounts.py  test_implementations.py
