[project]
name = "fractal-healthcheck"
version = "0.1.25"
authors = [
  {name = "Alberto Pastorutti", email = "alberto.pastorutti@exact-lab.it"},
  {name = "Tommaso Comparin", email = "tommaso.comparin@exact-lab.it"},
]
description = "A simple tool to monitor Fractal instances"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "click >= 8.4.0, < 8.5.0",
    "psutil >= 7.2.0, < 7.3.0",
    "pyyaml >= 6.0.0, <6.1.0",
    "pydantic[email] >= 2.13.0, < 2.14.0",
    "urllib3 >= 2.3.0, < 3.0.0",
    "paramiko >= 5.0.0, < 5.1.0",
    "fabric >= 3.2.2, < 4.0.0",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "cryptography>=48.0.0",
]
[project.optional-dependencies]
dev = [
    "bumpver",
    "devtools >= 0.12.2",
    "pytest >= 9.0.0, < 9.1.0",
    "requests >= 2.32.0, < 3.0.0",
]

[build-system]
requires = ["setuptools >= 80.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
fractal-health = "fractal_healthcheck.main:main"

[tool.bumpver]
current_version = "0.1.25"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"$',
]
"src/fractal_healthcheck/__init__.py" = [
    '__VERSION__ = "{version}"$'
]

